--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
   "license": "MIT",
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
-    "moment": "^2.17.1",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0",
     "vuex": "^2.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.4.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.27.1",
+    "eslint": "^3.18.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.0",
