fix localData bug, update transition way, add fastclick

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "keyves",
   "license": "MIT",
   "dependencies": {
+    "fastclick": "^1.0.6",
     "isomorphic-fetch": "^2.2.1",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0",
