--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "fastclick": "^1.0.6",
+    "heatmap.js": "^2.0.5",
     "isomorphic-fetch": "^2.2.1",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0",
