--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dota2-view",
+  "name": "vota",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -33,11 +33,13 @@
     "eslint": "^3.18.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "favicons-webpack-plugin": "0.0.7",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.13.2",
+    "url-loader": "^0.5.8",
     "vue-hot-reload-api": "^2.0.11",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^11.1.4",
