--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development webpack-dev-server --progress",
-    "dist": "NODE_ENV=production webpack --progress",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --progress",
+    "dist": "cross-env NODE_ENV=production webpack --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
